# nili

./: README.md  meson.build  monster.loki.nili.json
data/: meson.build  monster.loki.nili.data.gresource.xml  monster.loki.nili.desktop.in  monster.loki.nili.gschema.xml  monster.loki.nili.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.js  meson.build  monster.loki.nili.data.gresource.xml  monster.loki.nili.src.gresource.xml  nili.data.gresource.xml  window.blp  window.js  word.blp  word.js
